--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,7 @@
       "@okam/directus-node": ["libs/directus/directus-node/src/index.ts"],
       "@okam/directus-query": ["libs/directus/directus-query/src/index.ts"],
       "@okam/directus/directus-next": ["libs/directus/directus-next/src/index.ts"],
+      "@okam/logger": ["libs/stack/logger/src/index.ts"],
       "@okam/next-component": ["libs/stack/next-component/src/index.ts"],
       "@okam/next-component/server": ["libs/stack/next-component/src/server.ts"],
       "@okam/stack-ui": ["libs/stack/stack-ui/src/index.ts"]
