--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
     "@react-spring/web": "^9.7.4",
-    "@react-types/shared": "3.22.0",
+    "@react-types/shared": "^3.25.0",
     "@swc/helpers": "0.5.11",
     "@tanstack/react-query": "^5.17.1",
     "@tiptap/core": "^2.4.0",
