--- a/libs/automation/tsconfig.json
+++ b/libs/automation/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs"
+    "module": "ES2015"
   },
   "files": [],
   "include": [],
