fix(directus-node): module to nextnode

--- a/libs/directus/directus-node/tsconfig.lib.json
+++ b/libs/directus/directus-node/tsconfig.lib.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "ES2015",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "../../../dist/out-tsc",
     "declaration": true,
     "types": ["node"]
