--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -15,5 +15,8 @@
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
