chore: adding repository.url in package.json, removing publishConfig

--- a/libs/stack/logger/package.json
+++ b/libs/stack/logger/package.json
@@ -9,5 +9,8 @@
   "typings": "./src/index.d.ts",
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "url": "https://github.com/OKAMca/stack.git"
   }
 }
