--- a/libs/directus/directus-lib/package.json
+++ b/libs/directus/directus-lib/package.json
@@ -11,5 +11,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "url": "https://github.com/OKAMca/stack.git"
   }
 }
