--- a/libs/stack/core-lib/package.json
+++ b/libs/stack/core-lib/package.json
@@ -11,7 +11,7 @@
     }
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
