--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -3,5 +3,8 @@
   "version": "0.3.0",
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "url": "https://github.com/OKAMca/stack.git"
   }
 }
