--- a/libs/stack/logger/package.json
+++ b/libs/stack/logger/package.json
@@ -1,16 +1,24 @@
 {
   "name": "@okam/logger",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "dependencies": {
     "tslib": "^2.3.0"
   },
   "type": "commonjs",
   "main": "./src/index.js",
-  "typings": "./src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./index.mjs",
+      "require": "./index.js"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
+  },
+  "nxrelease": {
+    "repositoryUrl": "https://github.com/OKAMca/stack.git"
   }
 }
