fix: add missing typins to packages

--- a/libs/stack/core-lib/package.json
+++ b/libs/stack/core-lib/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@okam/core-lib",
-  "version": "1.15.0",
+  "version": "1.15.1",
   "main": "./index.js",
   "types": "./index.d.ts",
   "license": "MIT",
   "exports": {
     ".": {
-      "import": "./index.mjs",
-      "require": "./index.js"
+      "import": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      },
+      "require": {
+        "types": "./index.d.ts",
+        "default": "./index.js"
+      }
     }
   },
   "publishConfig": {
