--- a/libs/stack/logger/package.json
+++ b/libs/stack/logger/package.json
@@ -1,15 +1,22 @@
 {
   "name": "@okam/logger",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "license": "BUSL-1.1",
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "type": "commonjs",
-  "main": "./src/index.js",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "exports": {
     ".": {
-      "import": "./index.mjs",
-      "require": "./index.js"
+      "import": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      },
+      "require": {
+        "types": "./index.d.ts",
+        "default": "./index.js"
+      }
     }
   },
   "publishConfig": {
