--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "private": true,
   "dependencies": {
-    "@nx/devkit": "19.8.6",
-    "@nx/next": "19.8.6",
-    "@nx/plugin": "19.8.6",
+    "@nx/devkit": "20.2.1",
+    "@nx/next": "20.2.1",
+    "@nx/plugin": "20.2.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
@@ -84,28 +84,28 @@
     "@commitlint/config-conventional": "18.4.3",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
-    "@nx/cypress": "19.8.6",
-    "@nx/eslint-plugin": "19.8.6",
-    "@nx/jest": "19.8.6",
-    "@nx/js": "19.8.6",
-    "@nx/linter": "19.8.6",
-    "@nx/node": "19.8.6",
-    "@nx/react": "19.8.6",
-    "@nx/rollup": "19.8.6",
-    "@nx/storybook": "19.8.6",
-    "@nx/vite": "19.8.6",
-    "@nx/web": "19.8.6",
-    "@nx/workspace": "19.8.6",
+    "@nx/cypress": "20.2.1",
+    "@nx/eslint-plugin": "20.2.1",
+    "@nx/eslint": "20.2.1",
+    "@nx/jest": "20.2.1",
+    "@nx/js": "20.2.1",
+    "@nx/node": "20.2.1",
+    "@nx/react": "20.2.1",
+    "@nx/rollup": "20.2.1",
+    "@nx/storybook": "20.2.1",
+    "@nx/vite": "20.2.1",
+    "@nx/web": "20.2.1",
+    "@nx/workspace": "20.2.1",
     "@rollup/plugin-url": "8.0.2",
-    "@storybook/addon-a11y": "^8.3.3",
-    "@storybook/addon-essentials": "8.3.3",
-    "@storybook/addon-interactions": "8.3.3",
-    "@storybook/addon-links": "^8.3.3",
-    "@storybook/addon-mdx-gfm": "^8.3.3",
+    "@storybook/addon-a11y": "8.4.7",
+    "@storybook/addon-essentials": "8.4.7",
+    "@storybook/addon-interactions": "8.4.7",
+    "@storybook/addon-links": "8.4.7",
+    "@storybook/addon-mdx-gfm": "8.4.7",
     "@storybook/blocks": "^8.3.3",
-    "@storybook/core-server": "8.3.3",
+    "@storybook/core-server": "8.4.7",
     "@storybook/nextjs": "^8.3.3",
-    "@storybook/react-webpack5": "^8.3.3",
+    "@storybook/react-webpack5": "8.4.7",
     "@svgr/rollup": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.3.14",
@@ -134,14 +134,14 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "2.15.1",
-    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^0.20.0",
     "eslint-plugin-prettier": "^5.1.0",
     "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-regexp": "^2.1.2",
     "eslint-plugin-storybook": "0.6.15",
     "eslint-plugin-tailwindcss": "^3.13.0",
@@ -151,7 +151,7 @@
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "~23.0.1",
-    "nx": "19.8.6",
+    "nx": "20.2.1",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.32",
     "prettier": "^3.1.1",
@@ -161,7 +161,7 @@
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.5.4",
+    "typescript": "5.6.3",
     "verdaccio": "^5.29.0",
     "vite": "^5.0.13",
     "vite-plugin-dts": "~2.3.0",
