--- a/package.json
+++ b/package.json
@@ -13,77 +13,77 @@
     "release": "nx release",
     "dev": "nx serve demo",
     "build": "nx build demo",
-    "postinstall": "is-ci || npx husky install"
+    "postinstall": "is-ci || npx husky"
   },
   "private": true,
   "dependencies": {
     "@nx/devkit": "20.2.1",
     "@nx/next": "20.2.1",
     "@nx/plugin": "20.2.1",
-    "@react-aria/accordion": "^3.0.0-alpha.27",
-    "@react-aria/focus": "^3.16.0",
-    "@react-aria/i18n": "^3.10.0",
-    "@react-spring/web": "^9.7.4",
-    "@react-types/shared": "^3.25.0",
-    "@swc/helpers": "0.5.11",
-    "@tanstack/react-query": "^5.17.1",
-    "@tiptap/core": "^2.4.0",
-    "@tiptap/extension-blockquote": "^2.4.0",
-    "@tiptap/extension-bold": "^2.4.0",
-    "@tiptap/extension-bullet-list": "^2.4.0",
-    "@tiptap/extension-code": "^2.4.0",
-    "@tiptap/extension-code-block": "^2.4.0",
-    "@tiptap/extension-document": "^2.4.0",
-    "@tiptap/extension-hard-break": "^2.4.0",
-    "@tiptap/extension-heading": "^2.4.0",
-    "@tiptap/extension-horizontal-rule": "^2.4.0",
-    "@tiptap/extension-italic": "^2.4.0",
-    "@tiptap/extension-link": "^2.4.0",
-    "@tiptap/extension-list-item": "^2.4.0",
-    "@tiptap/extension-ordered-list": "^2.4.0",
-    "@tiptap/extension-paragraph": "^2.4.0",
-    "@tiptap/extension-strike": "^2.4.0",
-    "@tiptap/extension-subscript": "^2.6.6",
-    "@tiptap/extension-superscript": "^2.6.6",
-    "@tiptap/extension-table": "^2.4.0",
-    "@tiptap/extension-table-cell": "^2.4.0",
-    "@tiptap/extension-table-header": "^2.4.0",
-    "@tiptap/extension-table-row": "^2.4.0",
-    "@tiptap/extension-text": "^2.4.0",
-    "@tiptap/extension-text-align": "^2.4.0",
-    "@tiptap/pm": "^2.4.0",
-    "@tsed/exceptions": "^7.52.0",
-    "babel-loader": "^9.1.3",
+    "@react-aria/accordion": "^3.0.0-alpha.36",
+    "@react-aria/focus": "^3.19.0",
+    "@react-aria/i18n": "^3.12.4",
+    "@react-spring/web": "^9.7.5",
+    "@react-types/shared": "^3.26.0",
+    "@swc/helpers": "0.5.15",
+    "@tanstack/react-query": "^5.62.3",
+    "@tiptap/core": "^2.10.3",
+    "@tiptap/extension-blockquote": "^2.10.3",
+    "@tiptap/extension-bold": "^2.10.3",
+    "@tiptap/extension-bullet-list": "^2.10.3",
+    "@tiptap/extension-code": "^2.10.3",
+    "@tiptap/extension-code-block": "^2.10.3",
+    "@tiptap/extension-document": "^2.10.3",
+    "@tiptap/extension-hard-break": "^2.10.3",
+    "@tiptap/extension-heading": "^2.10.3",
+    "@tiptap/extension-horizontal-rule": "^2.10.3",
+    "@tiptap/extension-italic": "^2.10.3",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-list-item": "^2.10.3",
+    "@tiptap/extension-ordered-list": "^2.10.3",
+    "@tiptap/extension-paragraph": "^2.10.3",
+    "@tiptap/extension-strike": "^2.10.3",
+    "@tiptap/extension-subscript": "^2.10.3",
+    "@tiptap/extension-superscript": "^2.10.3",
+    "@tiptap/extension-table": "^2.10.3",
+    "@tiptap/extension-table-cell": "^2.10.3",
+    "@tiptap/extension-table-header": "^2.10.3",
+    "@tiptap/extension-table-row": "^2.10.3",
+    "@tiptap/extension-text": "^2.10.3",
+    "@tiptap/extension-text-align": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tsed/exceptions": "^8.3.1",
+    "babel-loader": "^9.2.1",
     "dequal": "^2.0.3",
     "graphql": "^16.9.0",
-    "graphql-request": "^7.1.0",
+    "graphql-request": "^7.1.2",
     "lodash.isequal": "4.5.0",
     "next": "^14.1.1",
-    "radash": "11.0.0",
+    "radash": "12.1.0",
     "react": "18.3.1",
-    "react-aria": "^3.32.0",
+    "react-aria": "^3.36.0",
     "react-div-100vh": "0.7.0",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.49.2",
-    "react-stately": "^3.30.0",
-    "react-use": "17.4.2",
+    "react-hook-form": "7.54.0",
+    "react-stately": "^3.34.0",
+    "react-use": "17.5.1",
     "rollup-plugin-preserve-directives": "^0.4.0",
-    "sanitize-html": "^2.13.0",
+    "sanitize-html": "^2.13.1",
     "server-only": "^0.0.1",
-    "storybook": "^8.2.8",
-    "swiper": "11.0.6",
-    "tailwind-variants": "^0.1.19",
-    "tslib": "^2.6.2",
-    "unlazy": "^0.10.2",
-    "usehooks-ts": "^2.9.1"
+    "storybook": "^8.4.7",
+    "swiper": "11.1.15",
+    "tailwind-variants": "^0.3.0",
+    "tslib": "^2.8.1",
+    "unlazy": "^0.12.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@commitlint/cli": "18.4.3",
-    "@commitlint/config-conventional": "18.4.3",
-    "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-eslint/eslint-plugin": "^3.20.1",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@commitlint/cli": "19.6.0",
+    "@commitlint/config-conventional": "19.6.0",
+    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-eslint/eslint-plugin": "^4.3.0",
     "@nx/cypress": "20.2.1",
     "@nx/eslint-plugin": "20.2.1",
     "@nx/eslint": "20.2.1",
@@ -102,31 +102,31 @@
     "@storybook/addon-interactions": "8.4.7",
     "@storybook/addon-links": "8.4.7",
     "@storybook/addon-mdx-gfm": "8.4.7",
-    "@storybook/blocks": "^8.3.3",
+    "@storybook/blocks": "^8.4.7",
     "@storybook/core-server": "8.4.7",
-    "@storybook/nextjs": "^8.3.3",
+    "@storybook/nextjs": "^8.4.7",
     "@storybook/react-webpack5": "8.4.7",
     "@svgr/rollup": "^8.1.0",
-    "@swc-node/register": "1.9.2",
-    "@swc/cli": "0.3.14",
-    "@swc/core": "1.5.7",
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "0.5.2",
+    "@swc/core": "1.10.1",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@testing-library/react": "15.0.6",
-    "@types/jest": "29.5.13",
+    "@testing-library/react": "16.1.0",
+    "@types/jest": "29.5.14",
     "@types/lodash.isequal": "4.5.8",
-    "@types/node": "20.10.5",
+    "@types/node": "22.10.1",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
-    "@types/sanitize-html": "^2.11.0",
+    "@types/sanitize-html": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
-    "@vitejs/plugin-react": "4.2.1",
+    "@vitejs/plugin-react": "4.3.4",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
-    "autoprefixer": "10.4.16",
+    "autoprefixer": "10.4.20",
     "babel-jest": "29.7.0",
-    "core-js": "3.36.1",
-    "cypress": "13.15.0",
+    "core-js": "3.39.0",
+    "cypress": "13.16.1",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
@@ -141,27 +141,27 @@
     "eslint-plugin-playwright": "^0.20.0",
     "eslint-plugin-prettier": "^5.1.0",
     "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-regexp": "^2.1.2",
     "eslint-plugin-storybook": "0.6.15",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^6.2.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jsdom": "~23.0.1",
+    "jsdom": "~25.0.1",
     "nx": "20.2.1",
     "nx-cloud": "19.1.0",
-    "postcss": "8.4.32",
-    "prettier": "^3.1.1",
+    "postcss": "8.4.49",
+    "prettier": "^3.4.2",
     "slugify": "1.6.6",
-    "swc-loader": "0.2.3",
-    "tailwindcss": "3.4.0",
+    "swc-loader": "0.2.6",
+    "tailwindcss": "3.4.16",
     "tailwindcss-logical": "^3.0.1",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.6.3",
+    "typescript": "5.7.2",
     "verdaccio": "^5.29.0",
     "vite": "^5.0.13",
     "vite-plugin-dts": "~2.3.0",
