--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -9,7 +9,7 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/demo"
+        "outputPath": "{projectRoot}/dist/apps/demo"
       },
       "configurations": {
         "development": {
