--- a/libs/stack/core-lib/project.json
+++ b/libs/stack/core-lib/project.json
@@ -26,7 +26,7 @@
       ],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/libs/stack/core-lib"
+        "outputPath": "{projectRoot}/dist/libs/stack/core-lib"
       },
       "configurations": {
         "development": {
