--- a/libs/directus/directus-next/project.json
+++ b/libs/directus/directus-next/project.json
@@ -8,7 +8,7 @@
   ],
   "targets": {
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": [
         "{options.outputFile}"
       ],
