--- a/libs/directus/directus-flexible-content/tsconfig.lib.json
+++ b/libs/directus/directus-flexible-content/tsconfig.lib.json
@@ -2,15 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
-    "types": [
-      "node",
-      "next"
-    ]
+    "types": ["node", "next"]
   },
   "paths": {
-    "@workspace/*": [
-      "dist/libs/*"
-    ]
+    "@workspace/*": ["dist/libs/*"]
   },
   "files": [
     "../../../node_modules/@nx/react/typings/cssmodule.d.ts",
@@ -28,10 +23,5 @@
     "**/*.stories.ts",
     "**/*.stories.js"
   ],
-  "include": [
-    "**/*.js",
-    "**/*.jsx",
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
