--- a/libs/directus/directus-node/project.json
+++ b/libs/directus/directus-node/project.json
@@ -3,39 +3,29 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/directus/directus-node/src",
   "projectType": "library",
-  "tags": [
-    "publishable"
-  ],
+  "tags": ["publishable"],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/libs/directus/directus-node",
         "tsConfig": "libs/directus/directus-node/tsconfig.lib.json",
         "packageJson": "libs/directus/directus-node/package.json",
         "main": "libs/directus/directus-node/src/index.ts",
-        "assets": [
-          "libs/directus/directus-node/*.md"
-        ]
+        "assets": ["libs/directus/directus-node/*.md"]
       }
     },
     "publish": {
       "command": "node tools/scripts/publish.mjs directus-node {args.ver} {args.tag}",
-      "dependsOn": [
-        "build"
-      ]
+      "dependsOn": ["build"]
     },
     "lint": {
       "executor": "@nx/eslint:lint"
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/directus/directus-node/jest.config.ts"
       }
