--- a/libs/stack/logger/project.json
+++ b/libs/stack/logger/project.json
@@ -11,15 +11,11 @@
       }
     }
   },
-  "tags": [
-    "publishable"
-  ],
+  "tags": ["publishable"],
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
         "outputPath": "dist/libs/stack/logger"
