--- a/libs/automation/package.json
+++ b/libs/automation/package.json
@@ -2,8 +2,10 @@
   "name": "@okam/automation",
   "version": "1.2.0",
   "dependencies": {
-    "@nx/devkit": "19.0.2",
-    "tslib": "^2.3.0"
+    "@nx/devkit": "20.2.2",
+    "tslib": "^2.3.0",
+    "@okam/core-lib": "1.15.1",
+    "radashi": "^12.3.0"
   },
   "type": "commonjs",
   "main": "./src/index.js",
