--- a/libs/directus/directus-next-component/package.json
+++ b/libs/directus/directus-next-component/package.json
@@ -18,5 +18,15 @@
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
+  },
+  "dependencies": {
+    "@okam/logger": "1.0.1",
+    "@okam/next-component": "0.3.0",
+    "@okam/stack-ui": "1.30.1",
+    "@react-spring/web": "^9.7.5",
+    "next": "^14.1.1",
+    "radashi": "^12.3.0",
+    "react": "18.3.1",
+    "unlazy": "^0.12.1"
   }
 }
