--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -18,5 +18,10 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@okam/logger": "1.0.1",
+    "next": "^14.1.1",
+    "radashi": "^12.3.0"
   }
 }
