--- a/libs/directus/directus-node/package.json
+++ b/libs/directus/directus-node/package.json
@@ -8,5 +8,10 @@
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
+  },
+  "dependencies": {
+    "@graphql-codegen/cli": "^5.0.3",
+    "@okam/logger": "1.0.1",
+    "tslib": "^2.8.1"
   }
 }
