--- a/libs/stack/core-lib/package.json
+++ b/libs/stack/core-lib/package.json
@@ -24,5 +24,10 @@
   },
   "nxrelease": {
     "repositoryUrl": "https://github.com/OKAMca/stack.git"
+  },
+  "dependencies": {
+    "@tsed/exceptions": "^8.3.1",
+    "dequal": "^2.0.3",
+    "react": "18.3.1"
   }
 }
