--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -6,5 +6,9 @@
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
+  },
+  "dependencies": {
+    "@okam/stack-ui": "1.30.1",
+    "next": "^14.1.1"
   }
 }
