--- a/libs/stack/stack-ui/package.json
+++ b/libs/stack/stack-ui/package.json
@@ -14,5 +14,45 @@
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
+  },
+  "dependencies": {
+    "@internationalized/date": "3.6.0",
+    "@okam/core-lib": "1.15.1",
+    "@okam/logger": "1.0.1",
+    "@react-aria/accordion": "^3.0.0-alpha.36",
+    "@react-aria/calendar": "3.6.0",
+    "@react-aria/checkbox": "3.15.0",
+    "@react-aria/datepicker": "3.12.0",
+    "@react-aria/focus": "^3.19.0",
+    "@react-aria/i18n": "^3.12.4",
+    "@react-aria/overlays": "3.24.0",
+    "@react-aria/tabs": "3.9.8",
+    "@react-aria/utils": "3.26.0",
+    "@react-aria/visually-hidden": "3.8.18",
+    "@react-spring/web": "^9.7.5",
+    "@react-stately/calendar": "3.6.0",
+    "@react-stately/checkbox": "3.6.10",
+    "@react-stately/collections": "3.12.0",
+    "@react-stately/datepicker": "3.11.0",
+    "@react-stately/overlays": "3.6.12",
+    "@react-stately/radio": "3.10.9",
+    "@react-stately/tabs": "3.7.0",
+    "@react-stately/toggle": "3.8.0",
+    "@react-types/radio": "3.8.5",
+    "@react-types/shared": "^3.26.0",
+    "@react-types/tabs": "3.3.11",
+    "lodash.isempty": "^4.4.0",
+    "lodash.isequal": "4.5.0",
+    "radashi": "^12.3.0",
+    "react": "18.3.1",
+    "react-aria": "^3.36.0",
+    "react-div-100vh": "0.7.0",
+    "react-hook-form": "7.54.0",
+    "react-stately": "^3.34.0",
+    "react-use": "17.5.1",
+    "sanitize-html": "^2.13.1",
+    "swiper": "11.1.15",
+    "tailwind-variants": "^0.3.0",
+    "usehooks-ts": "^3.1.0"
   }
 }
