--- a/libs/stack/stack-ui/project.json
+++ b/libs/stack/stack-ui/project.json
@@ -3,9 +3,7 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/stack/stack-ui/src",
   "projectType": "library",
-  "tags": [
-    "publishable"
-  ],
+  "tags": ["publishable"],
   "targets": {
     "semantic-release": {
       "executor": "@theunderscorer/nx-semantic-release:semantic-release",
@@ -14,27 +12,23 @@
         "repositoryUrl": "https://github.com/OKAMca/stack.git",
         "npm": true,
         "github": true,
-        "branches": [
-          "main"
-        ]
+        "branches": ["main"]
       }
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "libs/stack/stack-ui/**/*.{ts,tsx,js,jsx}"
+          "libs/stack/stack-ui/**/*.{ts,tsx,js,jsx}",
+          "libs/stack/stack-ui/package.json",
+          "libs/stack/stack-ui/project.json"
         ]
       }
     },
     "build": {
       "executor": "@nx/vite:build",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
         "outputPath": "dist/libs/stack/stack-ui"
@@ -62,9 +56,7 @@
     },
     "build-storybook": {
       "executor": "@nx/storybook:build",
-      "outputs": [
-        "{options.outputDir}"
-      ],
+      "outputs": ["{options.outputDir}"],
       "options": {
         "outputDir": "dist/storybook/stack-ui",
         "configDir": "libs/stack/stack-ui/.storybook"
