--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@react-aria/i18n": "^3.12.4",
     "@react-spring/web": "^9.7.5",
     "@react-types/shared": "^3.26.0",
-    "@swc/helpers": "0.5.15",
     "@tanstack/react-query": "^5.62.3",
     "@tiptap/core": "^2.10.3",
     "@tiptap/extension-blockquote": "^2.10.3",
@@ -53,13 +52,13 @@
     "@tiptap/extension-text-align": "^2.10.3",
     "@tiptap/pm": "^2.10.3",
     "@tsed/exceptions": "^8.3.1",
-    "babel-loader": "^9.2.1",
     "dequal": "^2.0.3",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
+    "lodash.isempty": "^4.4.0",
     "lodash.isequal": "4.5.0",
     "next": "^14.1.1",
-    "radash": "12.1.0",
+    "radashi": "^12.3.0",
     "react": "18.3.1",
     "react-aria": "^3.36.0",
     "react-div-100vh": "0.7.0",
@@ -67,7 +66,6 @@
     "react-hook-form": "7.54.0",
     "react-stately": "^3.34.0",
     "react-use": "17.5.1",
-    "rollup-plugin-preserve-directives": "^0.4.0",
     "sanitize-html": "^2.13.1",
     "server-only": "^0.0.1",
     "storybook": "^8.4.7",
@@ -113,6 +111,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/react": "16.1.0",
     "@types/jest": "29.5.14",
+    "@types/lodash.isempty": "^4.4.9",
     "@types/lodash.isequal": "4.5.8",
     "@types/node": "22.10.1",
     "@types/react": "18.2.33",
@@ -126,6 +125,7 @@
     "@vitest/ui": "1.6.0",
     "autoprefixer": "10.4.20",
     "babel-jest": "29.7.0",
+    "babel-loader": "^9.2.1",
     "core-js": "3.39.0",
     "cypress": "13.16.1",
     "eslint": "8.56.0",
@@ -156,6 +156,7 @@
     "nx-cloud": "19.1.0",
     "postcss": "8.4.49",
     "prettier": "^3.4.2",
+    "rollup-plugin-preserve-directives": "^0.4.0",
     "slugify": "1.6.6",
     "swc-loader": "0.2.6",
     "tailwindcss": "3.4.16",
