--- a/libs/directus/directus-block/package.json
+++ b/libs/directus/directus-block/package.json
@@ -1,16 +1,28 @@
 {
   "name": "@okam/directus-block",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "main": "./index.js",
   "types": "./index.d.ts",
   "exports": {
     ".": {
-      "import": "./index.mjs",
-      "require": "./index.js"
+      "import": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      },
+      "require": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      }
     },
     "./server": {
-      "import": "./server.mjs",
-      "require": "./server.js"
+      "import": {
+        "types": "./server.d.ts",
+        "default": "./server.mjs"
+      },
+      "require": {
+        "types": "./server.d.ts",
+        "default": "./server.mjs"
+      }
     }
   },
   "publishConfig": {
@@ -21,8 +33,8 @@
   },
   "dependencies": {
     "@graphql-typed-document-node/core": "3.2.0",
-    "@okam/directus-query": "1.4.0",
-    "@okam/stack-ui": "1.31.0",
+    "@okam/directus-query": "1.4.1",
+    "@okam/stack-ui": "1.31.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "radashi": "^12.3.0",
