--- a/libs/directus/directus-next-component/package.json
+++ b/libs/directus/directus-next-component/package.json
@@ -1,16 +1,28 @@
 {
   "name": "@okam/directus-next-component",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "main": "./index.js",
   "types": "./index.d.ts",
   "exports": {
     ".": {
-      "import": "./index.mjs",
-      "require": "./index.js"
+      "import": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      },
+      "require": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      }
     },
     "./server": {
-      "import": "./server.mjs",
-      "require": "./server.js"
+      "import": {
+        "types": "./server.d.ts",
+        "default": "./server.mjs"
+      },
+      "require": {
+        "types": "./server.d.ts",
+        "default": "./server.mjs"
+      }
     }
   },
   "publishConfig": {
@@ -21,8 +33,8 @@
   },
   "dependencies": {
     "@okam/logger": "1.1.0",
-    "@okam/next-component": "0.4.0",
-    "@okam/stack-ui": "1.31.0",
+    "@okam/next-component": "0.4.1",
+    "@okam/stack-ui": "1.31.1",
     "@react-spring/web": "^9.7.5",
     "next": "^14.1.1",
     "radashi": "^12.3.0",
