--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "release": "nx release",
     "dev": "nx serve demo",
     "build": "nx build demo",
-    "postinstall": "is-ci || npx husky install"
+    "postinstall": "is-ci || husky"
   },
   "private": true,
   "dependencies": {
@@ -144,6 +144,7 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^6.2.0",
     "husky": "^9.1.7",
+    "is-ci": "^4.1.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.7.0",
