--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -32,6 +32,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@okam/core-lib": "1.16.0",
     "@okam/directus-node": "0.4.0",
     "@okam/logger": "1.1.0",
     "next": "^14.1.1",
