--- a/libs/directus/directus-node/package.json
+++ b/libs/directus/directus-node/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@graphql-codegen/cli": "^5.0.3",
     "@okam/logger": "1.1.0",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "@okam/core-lib": "1.16.0"
   }
 }
