--- a/libs/directus/directus-next-component/package.json
+++ b/libs/directus/directus-next-component/package.json
@@ -39,6 +39,7 @@
     "next": "^14.1.1",
     "radashi": "^12.3.0",
     "react": "18.3.1",
-    "unlazy": "^0.12.1"
+    "unlazy": "^0.12.1",
+    "@okam/directus-next": "0.4.1"
   }
 }
