--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,6 +22,7 @@
       "@okam/directus-flexible-content": ["libs/directus/directus-flexible-content/src/index.ts"],
       "@okam/directus-flexible-content/server": ["libs/directus/directus-flexible-content/src/server.ts"],
       "@okam/directus-next": ["libs/directus/directus-next/src/index.ts"],
+      "@okam/directus-next/server": ["libs/directus/directus-next/src/server.ts"],
       "@okam/directus-next-component": ["libs/directus/directus-next-component/src/index.ts"],
       "@okam/directus-next-component/server": ["libs/directus/directus-next-component/src/server.ts"],
       "@okam/directus-node": ["libs/directus/directus-node/src/index.ts"],
@@ -29,6 +30,7 @@
       "@okam/directus/directus-next": ["libs/directus/directus-next/src/index.ts"],
       "@okam/logger": ["libs/stack/logger/src/index.ts"],
       "@okam/next-component": ["libs/stack/next-component/src/index.ts"],
+      "@okam/next-component/server": ["libs/stack/next-component/src/server.ts"],
       "@okam/stack-ui": ["libs/stack/stack-ui/src/index.ts"]
     }
   },
