--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@okam/stack-ui": "1.31.1",
-    "next": "^14.1.1"
+    "next": "^14.1.1",
+    "nuqs": "^2.3.2",
+    "radashi": "^12.3.0",
+    "@okam/core-lib": "1.16.0",
+    "react": "18.3.1"
   }
 }
