feat(next-component): filter hook + component using nuqs and react aria

--- a/libs/stack/next-component/tsconfig.storybook.json
+++ b/libs/stack/next-component/tsconfig.storybook.json
@@ -26,6 +26,8 @@
     "src/**/*.stories.tsx",
     "src/**/*.stories.mdx",
     ".storybook/*.js",
-    ".storybook/*.ts"
+    ".storybook/*.ts",
+    ".storybook/preview.ts",
+    ".storybook/preview.tsx"
   ]
 }
