--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -13,6 +13,9 @@
     "nuqs": "^2.3.2",
     "radashi": "^12.3.0",
     "@okam/core-lib": "1.16.0",
-    "react": "18.3.1"
+    "react": "18.3.1",
+    "react-stately": "^3.34.0",
+    "tailwind-variants": "^0.3.0",
+    "react-aria": "^3.36.0"
   }
 }
