--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,13 +23,14 @@
       "@okam/directus-flexible-content/server": ["libs/directus/directus-flexible-content/src/server.ts"],
       "@okam/directus-next": ["libs/directus/directus-next/src/index.ts"],
       "@okam/directus-next-component": ["libs/directus/directus-next-component/src/index.ts"],
-      "@okam/directus-next-component/server": ["libs/directus/directus-next-component/src/server.ts"],
       "@okam/directus-node": ["libs/directus/directus-node/src/index.ts"],
       "@okam/directus-query": ["libs/directus/directus-query/src/index.ts"],
       "@okam/directus/directus-next": ["libs/directus/directus-next/src/index.ts"],
       "@okam/logger": ["libs/stack/logger/src/index.ts"],
       "@okam/next-component": ["libs/stack/next-component/src/index.ts"],
-      "@okam/stack-ui": ["libs/stack/stack-ui/src/index.ts"]
+      "@okam/next-component/server": ["libs/stack/next-component/src/server.ts"],
+      "@okam/stack-ui": ["libs/stack/stack-ui/src/index.ts"],
+      "@okam/stack-ui/server": ["libs/stack/stack-ui/src/server.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
