ix(stack-ui): consistent theming, better customizability for calendar & DatePicker
* fix(stack-ui): more consistent themeing, better customizability

* fix(stack-ui): consistent theming, better customizability for calendar

* docs(stack-ui): theme and stories to showcase new features

* fix(stack-ui): export calendar/datepicker subcomponents

* chore: dev install @storybook/react for types

* docs(stack-ui): stories documenting usage of unavailable/disabled/invalid dates

* fix(stack-ui): custom invalid indicator, pass unavailability to tokens

* test(stack-ui): remove @storybook/react

* chore: npm i

* Revert "chore: npm i"

This reverts commit 3ab4484dc6ad9a2175b53c7c8ace2c9573fa3d96.

* Revert "test(stack-ui): remove @storybook/react"

This reverts commit cfeed5b158877a58fc980efd4e5903b51f7c2195.

* fix(stack-ui): useThemeContext relative import

* fix(stack-ui): calendar components get all state tokens + outside range token

* refactor(stack-ui): get calendar from main react-aria/stately libs

* docs(stack-ui): more documentation, better unavailable dates example

* fix(stack-ui): invalid indicator supports themeing + position token

* docs(stack-ui): custom invalid indicator in stories

* fix(stack-ui): missing use client directives

* docs(stack-ui): better styles for unavailable types of dates

* refactor(stack-ui): datepicker from main react-aria lib

* docs(stack-ui): calendar, range calendar docs

* chore(stack-ui): update react-aria for new calendar usage

* fix(stack-ui): allow 2-letters weekday labels

* fix(stack-ui): allow passing props to calendargrid from calendars

* chore(stack-ui): cleanup

* refactor(stack-ui): import datepicker directly from main packages

* fix(stack-ui): fix typing issue caused by react-aria update

* fix: checkbox a11y issue

* fix: lint

* feat(stack-ui): added wysiwyg allowed attribute and tags control

* docs(stack-ui): enhance Wysiwyg Block stories with comprehensive examples and documentation

* feat: add header option

--- a/package.json
+++ b/package.json
@@ -58,11 +58,11 @@
     "next": "^14.1.1",
     "radashi": "^12.3.0",
     "react": "18.3.1",
-    "react-aria": "^3.36.0",
+    "react-aria": "^3.39.0",
     "react-div-100vh": "0.7.0",
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.0",
-    "react-stately": "^3.34.0",
+    "react-stately": "^3.37.0",
     "react-use": "17.5.1",
     "sanitize-html": "^2.13.1",
     "server-only": "^0.0.1",
@@ -103,6 +103,7 @@
     "@storybook/core-server": "8.4.7",
     "@storybook/nextjs": "^8.4.7",
     "@storybook/react-webpack5": "8.4.7",
+    "@storybook/react": "8.4.7",
     "@svgr/rollup": "^8.1.0",
     "@swc-node/register": "1.10.9",
     "@swc/cli": "0.5.2",
