--- a/libs/stack/core-lib/package.json
+++ b/libs/stack/core-lib/package.json
@@ -25,9 +25,5 @@
   "nxrelease": {
     "repositoryUrl": "https://github.com/OKAMca/stack.git"
   },
-  "dependencies": {
-    "@tsed/exceptions": "^8.3.1",
-    "dequal": "^2.0.3",
-    "react": "18.3.1"
-  }
+  "dependencies": {}
 }
