--- a/libs/directus/directus-flexible-content/package.json
+++ b/libs/directus/directus-flexible-content/package.json
@@ -24,9 +24,34 @@
   "dependencies": {
     "@nx/vite": "20.2.2",
     "@okam/directus-block": "1.5.3",
-    "@okam/stack-ui": "1.35.3",
+    "@okam/stack-ui": "1.35.4",
     "@vitejs/plugin-react": "4.3.4",
     "vite": "^5.0.13",
-    "vite-plugin-dts": "~2.3.0"
+    "vite-plugin-dts": "~2.3.0",
+    "@tiptap/extension-blockquote": "^2.10.3",
+    "@tiptap/extension-bold": "^2.10.3",
+    "@tiptap/extension-bullet-list": "^2.10.3",
+    "@tiptap/extension-code": "^2.10.3",
+    "@tiptap/extension-code-block": "^2.10.3",
+    "@tiptap/extension-document": "^2.10.3",
+    "@tiptap/extension-hard-break": "^2.10.3",
+    "@tiptap/extension-heading": "^2.10.3",
+    "@tiptap/extension-horizontal-rule": "^2.10.3",
+    "@tiptap/extension-italic": "^2.10.3",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-list-item": "^2.10.3",
+    "@tiptap/extension-ordered-list": "^2.10.3",
+    "@tiptap/extension-paragraph": "^2.10.3",
+    "@tiptap/extension-strike": "^2.10.3",
+    "@tiptap/extension-subscript": "^2.10.3",
+    "@tiptap/extension-superscript": "^2.10.3",
+    "@tiptap/extension-table": "^2.10.3",
+    "@tiptap/extension-table-cell": "^2.10.3",
+    "@tiptap/extension-table-header": "^2.10.3",
+    "@tiptap/extension-table-row": "^2.10.3",
+    "@tiptap/extension-text": "^2.10.3",
+    "@tiptap/extension-text-align": "^2.10.3",
+    "@tiptap/core": "^2.10.3",
+    "react": "18.3.1"
   }
 }
