--- a/libs/directus/directus-next-component/package.json
+++ b/libs/directus/directus-next-component/package.json
@@ -34,7 +34,12 @@
   "dependencies": {
     "@okam/logger": "1.1.0",
     "@okam/next-component": "1.0.2",
-    "@okam/stack-ui": "1.35.3",
+    "@okam/stack-ui": "1.35.4",
+    "@react-spring/web": "^9.7.5",
+    "next": "^14.1.1",
+    "radashi": "^12.3.0",
+    "react": "18.3.1",
+    "unlazy": "^0.12.1",
     "@okam/directus-next": "1.1.0"
   }
 }
