--- a/libs/directus/directus-query/package.json
+++ b/libs/directus/directus-query/package.json
@@ -22,7 +22,13 @@
     "url": "https://github.com/OKAMca/stack.git"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-typed-document-node/core": "3.2.0",
     "@okam/core-lib": "1.16.0",
-    "@okam/logger": "1.1.0"
+    "@okam/logger": "1.1.0",
+    "@tanstack/react-query": "^5.62.3",
+    "graphql-request": "^7.1.2",
+    "radashi": "^12.3.0",
+    "react": "18.3.1"
   }
 }
