--- a/libs/stack/next-component/package.json
+++ b/libs/stack/next-component/package.json
@@ -8,6 +8,10 @@
     "url": "https://github.com/OKAMca/stack.git"
   },
   "dependencies": {
-    "@okam/stack-ui": "1.35.3"
+    "@okam/stack-ui": "1.35.4",
+    "next": "^14.1.1",
+    "react": "18.3.1",
+    "react-use": "17.5.1",
+    "tailwind-variants": "^0.3.0"
   }
 }
