feat(directus-next): /api/redirect route handler to fetch + cache directus redirects
* refactor(directus-next): externalize type definitions

* refactor(directus-node): externalize type definitions

* fix(directus-node): redirects validation

* feat(directus-next): /api/redirect route handler to fetch + cache directus redirects

* fix(directus-next): directus redirects handling in directusRouteRouter

* refactor(directus-next): redirects -> redirect to match api route name

* fix(directus-next): export redirect functions

* test(demo): added redirect api route test

* docs(demo): documented how to test redirect api

* refactor(directus-next): deprecate passing response to directusRouteRouter

* chore(demo): lint

* fix(core-lib): added normalize path util

* fix(directus-node): separate files to allow imports in middleware

* fix(directus-next): support vercel_url as fallback

* chore(directus-next): cleanup

* fix(core-lib): safer normalizePath util

* refactor(directus-node): use normalizePath from core-lib

* fix: apiKey/endpoint is required

* fix(directus-next): undefined gql env vars types in fetch redirects config

--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -32,6 +32,8 @@
     "access": "public"
   },
   "dependencies": {
+    "@okam/core-lib": "1.16.0",
+    "@okam/directus-node": "0.5.0",
     "@okam/logger": "1.1.0",
     "next": "^14.1.1",
     "radashi": "^12.3.0",
