--- a/libs/directus/directus-node/package.json
+++ b/libs/directus/directus-node/package.json
@@ -6,13 +6,34 @@
   "publishConfig": {
     "access": "public"
   },
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      },
+      "require": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      }
+    },
+    "./edge": {
+      "import": {
+        "types": "./edge.d.ts",
+        "default": "./edge.mjs"
+      },
+      "require": {
+        "types": "./edge.d.ts",
+        "default": "./edge.mjs"
+      }
+    }
+  },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
   },
   "dependencies": {
     "@graphql-codegen/cli": "^5.0.3",
     "@okam/logger": "1.1.0",
-    "tslib": "^2.8.1",
     "@okam/core-lib": "1.16.0"
   }
 }
