feat(directus-query): codegen file update
* feat(directus-query): codegen file update

* feat(directus-node): enhance GraphQL code generation configuration

* fix(directus-node): codegen support for NEXT_SERVER_GRAPHQL_URL

* fix: resolve path correctly

---------

Co-authored-by: poclerson <pierre-olivier@okam.ca>
Co-authored-by: Marie-Maxime Tanguay <marie-maxime@okam.ca>

--- a/libs/directus/directus-node/package.json
+++ b/libs/directus/directus-node/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@graphql-codegen/cli": "^5.0.3",
     "@okam/logger": "1.1.0",
+    "dotenv": "^16.4.7",
     "@okam/core-lib": "1.17.0"
   }
 }
