fix(core-lib): add react-server entry

--- a/libs/stack/core-lib/package.json
+++ b/libs/stack/core-lib/package.json
@@ -8,6 +8,11 @@
   "sideEffects": false,
   "exports": {
     ".": {
+      "react-server": {
+        "types": "./server.d.ts",
+        "import": "./server.mjs",
+        "require": "./server.js"
+      },
       "import": {
         "types": "./index.d.ts",
         "default": "./index.mjs"
