chore: pnpm adjustments

--- a/.npmrc
+++ b/.npmrc
@@ -5,5 +5,8 @@
 # Required for TypeScript type resolution across the monorepo
 shamefully-hoist=true
 
-# Fail on unmet peer dependencies
-strict-peer-dependencies=true
+# Allow peer dependency mismatches (common in monorepos with mixed package versions)
+strict-peer-dependencies=false
+
+# Link workspace packages when version range matches (matches npm workspaces behavior)
+link-workspace-packages=true
